--- a/internal/auth/config/.env-auth
+++ b/internal/auth/config/.env-auth
@@ -1,8 +1,9 @@
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=auth_user
-DB_PASSWORD=auth_password
-DB_NAME=auth_db
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=auth
+
 JWT_SECRET=supersecret252
 
 AUTH_SERVICE_ADDRESS=localhost:50051
