--- a/internal/gateway/config/.env-gateway
+++ b/internal/gateway/config/.env-gateway
@@ -2,3 +2,5 @@ AUTH_SERVICE_ADDRESS=localhost:50051
 DEVELOPMENT=true
 GATEWAY_PORT=8083
 PRODUCT_SERVICE_ADDRESS=localhost:50055
+PRODUCT_SERVICE_API_KEY=dev_api_key
+USE_HTTPS=false
