--- a/internal/gateway/config/.env-gateway
+++ b/internal/gateway/config/.env-gateway
@@ -4,6 +4,6 @@ GATEWAY_PORT=8083
 PRODUCT_SERVICE_ADDRESS=localhost:50055
 PRODUCT_SERVICE_API_KEY=dev_api_key
 USE_HTTPS=false
-RABBITMQ_URL=localhost:5672
+RABBITMQ_URL=amqp://localhost:5672
 RABBITMQ_USERNAME=guest
 RABBITMQ_PASSWORD=guest
