--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   rabbitmq:
     image: rabbitmq:3.8-management
     container_name: rabbitmq
-    hostname: rabbitmq
+    hostname: localhost
     network_mode: "host"
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
