--- a/internal/product/config/.env-product
+++ b/internal/product/config/.env-product
@@ -4,6 +4,7 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=product
 
+API_KEY=dev_api_key
 JWT_SECRET=supersecret252
 
 PRODUCT_SERVICE_ADDRESS=localhost:50055
