--- a/internal/product/config/.env-product
+++ b/internal/product/config/.env-product
@@ -8,3 +8,4 @@ API_KEY=dev_api_key
 JWT_SECRET=supersecret252
 
 PRODUCT_SERVICE_ADDRESS=localhost:50055
+RABBITMQ_URL=amqp://guest:guest@localhost:5672/
