--- a/internal/image/config/.env-image
+++ b/internal/image/config/.env-image
@@ -1,3 +1,15 @@
-STORAGE_PATH=/tmp/images
-IMAGE_BASE_URL=http://localhost:8084/images
+# Окружение (development/staging/production)
+ENVIRONMENT=development
+
+# Домен в зависимости от окружения
+DOMAIN=localhost
+
+# Пути хранения файлов
+STORAGE_PATH=${PWD}/storage/images
+STORAGE_TEMP_PATH=${PWD}/storage/temp
+
+# URL для доступа к изображениям
+IMAGE_BASE_URL=http://${DOMAIN}:8084/images
+
+# Подключение к RabbitMQ
 RABBITMQ_URL=amqp://guest:guest@localhost:5672/
