--- a/internal/image/config/.env-image
+++ b/internal/image/config/.env-image
@@ -5,8 +5,7 @@ ENVIRONMENT=development
 DOMAIN=localhost
 
 # Пути хранения файлов
-STORAGE_PATH=${PWD}/storage/images
-STORAGE_TEMP_PATH=${PWD}/storage/temp
+STORAGE_PATH=./storage/images
 
 # URL для доступа к изображениям
 IMAGE_BASE_URL=http://${DOMAIN}:8084/images
