--- a/internal/image/config/.env-image
+++ b/internal/image/config/.env-image
@@ -8,7 +8,7 @@ DOMAIN=localhost
 STORAGE_PATH=./storage/images
 
 # URL для доступа к изображениям
-IMAGE_BASE_URL=http://${DOMAIN}:8084/images
+IMAGE_BASE_URL=http://${DOMAIN}/storage/images
 
 # Подключение к RabbitMQ
 RABBITMQ_URL=amqp://guest:guest@localhost:5672/
