--- a/internal/image/config/.env-image
+++ b/internal/image/config/.env-image
@@ -2,7 +2,7 @@
 ENVIRONMENT=development
 
 # Домен в зависимости от окружения
-DOMAIN=localhost
+DOMAIN=localhost:8083
 
 # Пути хранения файлов
 STORAGE_PATH=./storage/images
