--- a/internal/gateway/config/.env-gateway
+++ b/internal/gateway/config/.env-gateway
@@ -5,3 +5,7 @@ PRODUCT_SERVICE_ADDRESS=localhost:50055
 PRODUCT_SERVICE_API_KEY=dev_api_key
 USE_HTTPS=false
 RABBITMQ_URL=amqp://guest:guest@localhost:5672/
+EMAIL_SMTP_HOST=smtp.yandex.ru
+EMAIL_SMTP_PORT=587
+EMAIL_FROM=zyazin.nikita@yandex.ru
+EMAIL_PASSWORD=110019745La!
