--- a/internal/gateway/config/.env-gateway
+++ b/internal/gateway/config/.env-gateway
@@ -8,4 +8,4 @@ RABBITMQ_URL=amqp://guest:guest@localhost:5672/
 EMAIL_SMTP_HOST=smtp.yandex.ru
 EMAIL_SMTP_PORT=587
 EMAIL_FROM=zyazin.nikita@yandex.ru
-EMAIL_PASSWORD=110019745La!
+EMAIL_PASSWORD=mzsflxnzyjxjnihu
