Add HTTPS support and update environment configuration templates

--- a/internal/auth/config/.env-auth.example
+++ b/internal/auth/config/.env-auth.example
@@ -1,9 +1,9 @@
 DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=auth
+DB_PORT=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
 
-JWT_SECRET=supersecret252
+JWT_SECRET=
 
-AUTH_SERVICE_ADDRESS=localhost:50051
+AUTH_SERVICE_ADDRESS=localhost:port
