--- a/internal/gateway/config/.env-gateway.example
+++ b/internal/gateway/config/.env-gateway.example
@@ -1,11 +1,20 @@
-AUTH_SERVICE_ADDRESS=localhost:50051
+AUTH_SERVICE_ADDRESS=localhost:port
+
 DEVELOPMENT=true
-GATEWAY_PORT=8083
-PRODUCT_SERVICE_ADDRESS=localhost:50055
-PRODUCT_SERVICE_API_KEY=dev_api_key
+
+GATEWAY_PORT=
+PRODUCT_SERVICE_ADDRESS=localhost:port
+
+PRODUCT_SERVICE_API_KEY=
+
 USE_HTTPS=false
-RABBITMQ_URL=amqp://guest:guest@localhost:5672/
-EMAIL_SMTP_HOST=smtp.yandex.ru
-EMAIL_SMTP_PORT=587
-EMAIL_FROM=zyazin.nikita@yandex.ru
-EMAIL_PASSWORD=mzsflxnzyjxjnihu
+
+RABBITMQ_URL=amqp://login:password@localhost:5672/
+
+CERT_FILE=
+KEY_FILE=
+
+EMAIL_SMTP_HOST=
+EMAIL_SMTP_PORT=
+EMAIL_FROM=
+EMAIL_PASSWORD=
