--- a/internal/product/config/.env-product.example
+++ b/internal/product/config/.env-product.example
@@ -1,11 +1,11 @@
 DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=postgres
+DB_PORT=port
+DB_USER=
+DB_PASSWORD=
 DB_NAME=product
 
-API_KEY=dev_api_key
-JWT_SECRET=supersecret252
+API_KEY=
+JWT_SECRET=
 
-PRODUCT_SERVICE_ADDRESS=localhost:50055
-RABBITMQ_URL=amqp://guest:guest@localhost:5672/
+PRODUCT_SERVICE_ADDRESS=localhost:port
+RABBITMQ_URL=amqp://login:password@localhost:5672/
