Remove log files and LICENSE, update gitignore to exclude them

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ internal/product/config/.env-product
 internal/auth/config/.env-auth
 internal/image/config/.env-image
 internal/gateway/config/.env-gateway
+*.log
+LICENSE
