Add file logging and configure log paths across all services

--- a/internal/image/config/.env-image.example
+++ b/internal/image/config/.env-image.example
@@ -5,3 +5,5 @@ STORAGE_PATH=./storage/images
 IMAGE_BASE_URL=http://${DOMAIN}/storage/images
 
 RABBITMQ_URL=amqp://login:password@localhost:port/
+
+LOG_FILE=
